force-app/main/default/objects/Ortho_App_Favorites__c/Ortho_App_Favorites__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Ortho App Favorites</label>
</CustomObject>