force-app/main/default/objects/Ortho_App_Favorites__c/fields/Is_Favorite__c.field-meta.xml
<CustomField>
    <fullName>Is_Favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Favorite?</label>
    <type>Checkbox</type>
</CustomField>