force-app/main/default/objects/Ortho_App_Favorites__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>